# snet-tester

./: .gitattributes  .gitignore  CLAUDE.md  README.md  backend.py  backup.py  build_exe.ps1  build_exe_v2.ps1  main.py  main_window.py  pyproject.toml  run.py  snet-tester.spec  snet-tester2.spec  usart.py
.claude/: settings.local.json
.claude/agents/: architect.md  builder.md  critic.md  pm.md  polisher.md  scout.md  ui-designer.md
docs/: DR_graph_readability.md  DR_graph_smooth_ramp_transition.md  agent-team.md  directive_ui_consistency.md  graph_aspect_ratio_review.md  graph_design_report.md  pm_reply_latest.txt  ui_relayout_mrs.md  ui_relayout_screen_spec.md  ui_verification_methodology.md
snet_tester/: __init__.py  __main__.py  _designer.py  config.py  main.py  presets.json
snet_tester/comm/: worker.py
snet_tester/protocol/: codec.py  constants.py  convert.py  parser.py  types.py
snet_tester/tests/: test_codec.py  test_convert.py  test_parser.py
snet_tester/ui/: main_window.ui
snet_tester/views/: helpers.py  main_window.py  plot_view.py  response_tracker.py  rx_panel.py  tx_panel.py
snet_tester2/: __init__.py  __main__.py  _designer.py  config.py  main.py
snet_tester2/comm/: commands.py  events.py  worker.py
snet_tester2/protocol/: codec.py  constants.py  enums.py
snet_tester2/resources/: presets.json
snet_tester2/resources/ui/: main_window.ui
snet_tester2/state/: statistics.py
snet_tester2/transport/: base.py  mock.py  serial.py
snet_tester2/views/: helpers.py  main_window.py  plot_view.py  response_tracker.py  rx_panel.py  tx_panel.py
spike/pyside6_loader/: README.md  run_spike.py  spike_loader.py
src/snet_tester/: _designer.py  graph_mockup_preview.py  graph_theme_preview.py  layout_preview.py
src/snet_tester/protocol/: codec.py
src/snet_tester/resources/: presets.json
src/snet_tester/views/: graph_mockup_window.py  helpers.py  layout_preview_window.py  main_window.py  plot_view.py  (+2 more)
tests/: test_convert.py  test_plot_view.py  test_v2_codec.py  test_v2_convert.py  test_v2_enums.py  test_v2_events.py  test_v2_integration.py  test_v2_oracle_parity.py  test_v2_parser.py  test_v2_plot_view.py  test_v2_pyside6_smoke.py  test_v2_response_tracker.py  test_v2_statistics.py  test_v2_transport_mock.py  test_v2_ui_consistency.py  test_v2_worker.py
tests/oracle/: capture_baseline.py  test_oracle.py  v1_baseline.json
tools/: check_ui_consistency.py  release_baseline_run1_32ms.json  release_baseline_run2_32ms.json  release_tx1_only_run1_32ms.json  release_tx1_only_run2_32ms.json  release_tx1_valve1_run1_32ms.json  release_tx1_valve1_run2_32ms.json  release_tx1_valve1_run3_32ms.json  release_tx1_valve1_run4_32ms.json  release_tx1_valve1_segmented_warm10_dynamic_run1_32ms.json  release_tx1_valve1_segmented_warm10_dynamic_run2_32ms.json  release_tx1_valve2_run1_32ms.json  release_tx1_valve2_run2_32ms.json  run_graph_perf_probe.py
ui/: main_window.ui
(+1 files in other folders)
