[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usart-tool"
version = "0.1.0"
description = "USART I/O Mode Tool"
requires-python = ">=3.13,<3.14"
dependencies = [
    "PyQt5>=5.15",
    "PyQt5-Qt5>=5.15",
    "pyqtgraph==0.14.0",
    "numpy==2.4.2",
    "pyserial==3.5",
    "pillow",
    "matplotlib",
]

[project.scripts]
snet-tester = "snet_tester.main:main"
snet-layout-preview = "snet_tester.layout_preview:main"
snet-graph-mockup-preview = "snet_tester.graph_mockup_preview:main"
snet-designer = "snet_tester._designer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snet_tester = ["resources/presets.json", "resources/ui/*.ui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
